# paprika-rs

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
migrations/: 20210730041040_recipes.down.sql  20210730041040_recipes.up.sql  20210731234545_deferrable_references.down.sql  20210731234545_deferrable_references.up.sql  20210802014715_recipe_category_table.down.sql  20210802014715_recipe_category_table.up.sql  20211006031842_optional_meal_recipe_uids.down.sql  20211006031842_optional_meal_recipe_uids.up.sql
paprika-api/: Cargo.toml  sqlx-data.json
paprika-api/src/: main.rs  updates.rs
paprika-client/: Cargo.toml
paprika-client/src/: lib.rs
