[package]
name = "paprika-api"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1"
async-trait = "0.1"
tokio = "1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "json"] }
serde_json = "1"

paprika-client = { path = "../paprika-client" }
