[package]
name = "paprika-api"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
async-trait = "0.1"
tokio = "1"
futures = "0.3"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "json", "offline"] }
serde_json = "1"

actix-web = "4"
actix-cors = "0"

juniper = "0.15"
juniper_actix = "0.4"
dataloader = { version = "0.16", default-features = false, features = ["runtime-tokio"] }

chrono = { version = "0.4", features = ["serde"] }

paprika-client = { path = "../paprika-client" }
