[package]
name = "paprika-client"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[features]
database = ["sqlx"]

[dependencies]
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

sqlx = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
