[package]
name = "paprika-client"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "multipart"] }
flate2 = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = "0.2"
